--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=website-1
+server.port=8080
 
 management.server.port=8081
 management.endpoints.web.exposure.include=*
@@ -8,8 +9,16 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:mysql://localhost:3306/website1
 spring.datasource.username=root
 spring.datasource.password=Asdf1234@
+# connection pooling
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+#spring.jpa.hibernate.ddl-auto=update
+#Check that tables are only created via flyway
 
 # flyway properties
-flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
 # Mysql does not have schemas.
 #flyway.schemas=website1
