--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=website-1
 server.port=8080
-
-management.server.port=8081
+server.servlet.context-path=/website-1
+management.server.port=8090
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include='health,info,metrics,hello'
 
