Database Per Tenant achieved dynamically.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include='health,info,metrics,hello'
 
 # db properties
-spring.datasource.url=jdbc:mysql://localhost:3306/website1
-spring.datasource.username=root
-spring.datasource.password=Asdf1234@
+#spring.datasource.url=jdbc:mysql://localhost:3306/website1
+#spring.datasource.username=root
+#spring.datasource.password=Asdf1234@
+#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # connection pooling
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=3
@@ -18,7 +19,9 @@ spring.datasource.hikari.max-lifetime=1800000
 #Check that tables are only created via flyway
 
 # flyway properties
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
 # Mysql does not have schemas.
 #flyway.schemas=website1
+spring.main.allow-bean-definition-overriding=true
